added execution button

--- a/src/project/templates/admin/change_form.html
+++ b/src/project/templates/admin/change_form.html
@@ -20,6 +20,7 @@
 {% endblock %}
 
 {% block extrahead %}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     {{ block.super }}
     <script src="{% static 'js/admin_tools.js' %}"></script>
 {% endblock %}
